// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JournalCard > renders correctly with a journal entry 1`] = `
<DocumentFragment>
  <div
    class="_cardWrapper_be814f"
  >
    <section
      aria-label="Journal card for France"
      class="_card_be814f"
    >
      <div
        class="_verticalStrip_be814f"
      />
      <img
        alt="Image of France"
        class="_cardImage_be814f"
        src="https://example.com/france.jpg"
      />
      <div
        class="_overlayText_be814f"
      >
        Read Journal
      </div>
    </section>
    <div
      class="_cardText_be814f"
    >
      <p
        class="_cardTitle_be814f"
      >
        France
      </p>
      <p
        class="_cardDate_be814f"
      >
        2023-01-12
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`JournalCard > renders correctly without a journal entry 1`] = `
<DocumentFragment>
  <div
    class="_cardWrapper_be814f"
  >
    <section
      aria-label="Journal card for Spain"
      class="_card_be814f"
    >
      <div
        class="_verticalStrip_be814f"
      />
      <img
        alt="Image of Spain"
        class="_cardImage_be814f"
        src="https://example.com/spain.jpg"
      />
      <div
        class="_overlayText_be814f"
      >
        Write Journal
      </div>
    </section>
    <div
      class="_cardText_be814f"
    >
      <p
        class="_cardTitle_be814f"
      >
        Spain
      </p>
    </div>
  </div>
</DocumentFragment>
`;
